// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`skill.init.behavior.guards.journey given: [case1] full behavior route with guards when: [t0] vision pass attempted without approval then: blocked by judge 1`] = `
"🪨 run solid skill repo=bhrain/role=driver/skill=route.stone.set

🦉 so you're saying there's a chance?

🗿 route.stone.set
   ├─ stone = 1.vision
   ├─ passage = blocked
   ├─ reason = wait for human approval
   └─ guard
      ├─ artifacts
      │   └─ 1.vision.md
      └─ judges
          └─ j1: npx rhachet run --repo bhrain --skill route.stone.judge --mechanism approved? --stone $stone --route $route
              ├─ finished 0.9s ✗
              ├─ judge: .route/1.vision.guard.judge.i1p1.d0db8b0c016b73977fad2df32c9cb3516381287e27403d824d4da3c9611dbe73.dabe714fd2c418ba29e23363f9e9d18ba44e891dd196bc817fb5bd0bd66a92d8.j1.md
              └─ reason: wait for human approval[0m[31m[0m
[0m[31m🪨 run solid skill repo=bhrain/role=driver/skill=route.stone.set[0m
[0m[31m   └─ 💥 failed with an error[0m
[0m[31m[0m
[0m[31mj1: inflight
  ✗ j1: finished 0.9s
    reason: wait for human approval[0m"
`;

exports[`skill.init.behavior.guards.journey given: [case1] full behavior route with guards when: [t1] vision pass attempted after approval then: allowed 1`] = `
"🪨 run solid skill repo=bhrain/role=driver/skill=route.stone.set

🦉 so you're saying there's a chance?

🗿 route.stone.set
   ├─ stone = 1.vision
   ├─ passage = allowed
   └─ guard
      ├─ artifacts
      │   └─ 1.vision.md
      └─ judges
          └─ j1: npx rhachet run --repo bhrain --skill route.stone.judge --mechanism approved? --stone $stone --route $route
              ├─ finished 2.0s ✓
              └─ judge: .route/1.vision.guard.judge.i1p1.d0db8b0c016b73977fad2df32c9cb3516381287e27403d824d4da3c9611dbe73.9b7fca35d5c2f9d6a6bedaa04679bafdd19a55ff89872d2b45aeb00178e59614.j1.md"
`;

exports[`skill.init.behavior.guards.journey given: [case1] full behavior route with guards when: [t2] criteria pass attempted without promise then: blocked by unpromised self-review 1`] = `
"🪨 run solid skill repo=bhrain/role=driver/skill=route.stone.set

🦉 so you're saying there's a chance?

🗿 route.stone.set
   ├─ stone = 2.1.criteria.blackbox
   └─ passage = blocked (self-review required)

🔍 check yo'self
   ├─ review.self 1/1
   │  ├─ slug = all-real-junior
   │  ├─ question all, especially yourself
   │  └─ see the guide below
   │
   ├─ promise its done? if so, run
   │  └─ rhx route.stone.set --stone 2.1.criteria.blackbox --as promised --that all-real-junior
   │
   ├─ here's the guide
   │  ├─
   │  │
   │  │  a junior recently worked on this criteria. are there any unquestioned
   │  │    assumptions the junior took as requirements? any of these need to
   │  │    be asked to the wisher instead?
   │  │
   │  └─
   │
   └─ promise its done? if so, run
      └─ rhx route.stone.set --stone 2.1.criteria.blackbox --as promised --that all-real-junior[0m[31m[0m
[0m[31m🪨 run solid skill repo=bhrain/role=driver/skill=route.stone.set[0m
[0m[31m   └─ 💥 failed with an error[0m
[0m[31m[0m"
`;

exports[`skill.init.behavior.guards.journey given: [case1] full behavior route with guards when: [t3] criteria pass attempted after promise then: allowed (no judges) 1`] = `
"🪨 run solid skill repo=bhrain/role=driver/skill=route.stone.set

🦉 so you're saying there's a chance?

🗿 route.stone.set
   ├─ stone = 2.1.criteria.blackbox
   └─ passage = allowed (artifacts only)"
`;

exports[`skill.init.behavior.guards.journey given: [case1] full behavior route with guards when: [t4] blueprint pass attempted without promises then: blocked by unpromised self-review 1`] = `
"🪨 run solid skill repo=bhrain/role=driver/skill=route.stone.set

🦉 so you're saying there's a chance?

🗿 route.stone.set
   ├─ stone = 3.3.blueprint.v1
   └─ passage = blocked (self-review required)

🔍 check yo'self
   ├─ review.self 1/3
   │  ├─ slug = all-done-self
   │  ├─ question all, especially yourself
   │  └─ see the guide below
   │
   ├─ promise its done? if so, run
   │  └─ rhx route.stone.set --stone 3.3.blueprint.v1 --as promised --that all-done-self
   │
   ├─ here's the guide
   │  ├─
   │  │
   │  │  are you sure all of the criteria and vision was covered?
   │  │    emit a report into the .behavior dir on gaps detected. then, fix all gaps.
   │  │
   │  └─
   │
   └─ promise its done? if so, run
      └─ rhx route.stone.set --stone 3.3.blueprint.v1 --as promised --that all-done-self[0m[31m[0m
[0m[31m🪨 run solid skill repo=bhrain/role=driver/skill=route.stone.set[0m
[0m[31m   └─ 💥 failed with an error[0m
[0m[31m[0m"
`;

exports[`skill.init.behavior.guards.journey given: [case1] full behavior route with guards when: [t5] blueprint pass attempted with promises but no approval then: blocked by judge 1`] = `
"🪨 run solid skill repo=bhrain/role=driver/skill=route.stone.set

🦉 so you're saying there's a chance?

🗿 route.stone.set
   ├─ stone = 3.3.blueprint.v1
   ├─ passage = blocked
   ├─ reason = wait for human approval
   └─ guard
      ├─ artifacts
      │   └─ 3.3.blueprint.v1.i1.md
      └─ judges
          └─ j1: npx rhachet run --repo bhrain --skill route.stone.judge --mechanism approved? --stone $stone --route $route
              ├─ finished 0.7s ✗
              ├─ judge: .route/3.3.blueprint.v1.guard.judge.i1p1.2f26d37384e66b5ee1d297c4c4b442c33f7f3f95919edeac42290e626a898964.a98e11103806256a1e8519508c981535ffc3e93d16160fa22521b64ae2d6b467.j1.md
              └─ reason: wait for human approval[0m[31m[0m
[0m[31m🪨 run solid skill repo=bhrain/role=driver/skill=route.stone.set[0m
[0m[31m   └─ 💥 failed with an error[0m
[0m[31m[0m
[0m[31mj1: inflight
  ✗ j1: finished 0.7s
    reason: wait for human approval[0m"
`;

exports[`skill.init.behavior.guards.journey given: [case1] full behavior route with guards when: [t6] blueprint pass attempted after approval then: allowed 1`] = `
"🪨 run solid skill repo=bhrain/role=driver/skill=route.stone.set

🦉 so you're saying there's a chance?

🗿 route.stone.set
   ├─ stone = 3.3.blueprint.v1
   ├─ passage = allowed
   └─ guard
      ├─ artifacts
      │   └─ 3.3.blueprint.v1.i1.md
      └─ judges
          └─ j1: npx rhachet run --repo bhrain --skill route.stone.judge --mechanism approved? --stone $stone --route $route
              ├─ finished 0.6s ✓
              └─ judge: .route/3.3.blueprint.v1.guard.judge.i1p1.2f26d37384e66b5ee1d297c4c4b442c33f7f3f95919edeac42290e626a898964.e386f26165482a37924bd5e9cfb4da99b30cd0eadd84a25e5a0f525652ea6b77.j1.md"
`;

exports[`skill.init.behavior.guards.journey given: [case1] full behavior route with guards when: [t7] execution pass attempted without promises then: blocked by unpromised self-review 1`] = `
"🪨 run solid skill repo=bhrain/role=driver/skill=route.stone.set

🦉 so you're saying there's a chance?

🗿 route.stone.set
   ├─ stone = 5.1.execution.phase0_to_phaseN.v1
   └─ passage = blocked (self-review required)

🔍 check yo'self
   ├─ review.self 1/2
   │  ├─ slug = all-done-self
   │  ├─ question all, especially yourself
   │  └─ see the guide below
   │
   ├─ promise its done? if so, run
   │  └─ rhx route.stone.set --stone 5.1.execution.phase0_to_phaseN.v1 --as promised --that all-done-self
   │
   ├─ here's the guide
   │  ├─
   │  │
   │  │  are you sure all was completed? review the blueprint and criteria.
   │  │    emit a report into the .behavior dir on gaps detected. then, fix all gaps.
   │  │
   │  └─
   │
   └─ promise its done? if so, run
      └─ rhx route.stone.set --stone 5.1.execution.phase0_to_phaseN.v1 --as promised --that all-done-self[0m[31m[0m
[0m[31m🪨 run solid skill repo=bhrain/role=driver/skill=route.stone.set[0m
[0m[31m   └─ 💥 failed with an error[0m
[0m[31m[0m"
`;

exports[`skill.init.behavior.guards.journey given: [case1] full behavior route with guards when: [t8] execution pass attempted after promises then: allowed (no judges) 1`] = `
"🪨 run solid skill repo=bhrain/role=driver/skill=route.stone.set

🦉 so you're saying there's a chance?

🗿 route.stone.set
   ├─ stone = 5.1.execution.phase0_to_phaseN.v1
   └─ passage = allowed (artifacts only)"
`;
